spacings corrected and extended

--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,8 @@
     --flair-border-radius: 0.25rem;
     --flair-element-spacing-vertical: 0.75rem;
     --flair-element-spacing-horizontal: 1rem;
-    --flair-element-spacing-horizontal-wide: 1.75rem;
+    --flair-element-spacing-horizontal-semi: calc(var(--flair-element-spacing-horizontal) * 1.25);
+    --flair-element-spacing-horizontal-wide: calc(var(--flair-element-spacing-horizontal) * 1.75);
     --flair-element-box-shadow: 0 2px 12px 0 hsl(var(--flair-primary-color-hue), 10%, 90%);
     --flair-button-padding: var(--flair-element-spacing-vertical)
         var(--flair-element-spacing-horizontal-wide);
@@ -459,7 +460,7 @@ nav.navbar > #navbar-toggler {
 /* card */
 .card {
     margin-bottom: var(--flair-element-spacing-vertical);
-    padding: var(--flair-element-spacing-vertical) var(--flair-element-spacing-horizontal);
+    padding: var(--flair-element-spacing-vertical) var(--flair-element-spacing-horizontal-semi);
     background: var(--flair-background-color);
     border-radius: var(--flair-border-radius);
     box-shadow: var(--flair-element-box-shadow);
@@ -468,9 +469,10 @@ nav.navbar > #navbar-toggler {
 .card-footer {
     display: flex;
     flex-direction: row;
-    margin-left: calc(var(--flair-element-spacing-horizontal) * -1);
-    margin-right: calc(var(--flair-element-spacing-horizontal) * -1);
-    padding: calc(var(--flair-element-spacing-vertical)) var(--flair-element-spacing-horizontal);
+    margin-left: calc(var(--flair-element-spacing-horizontal-semi) * -1);
+    margin-right: calc(var(--flair-element-spacing-horizontal-semi) * -1);
+    padding: calc(var(--flair-element-spacing-vertical))
+        var(--flair-element-spacing-horizontal-semi);
     background-color: var(--flair-element-background-color);
     > h1,
     h2,
@@ -533,7 +535,11 @@ nav.navbar > #navbar-toggler {
     display: flex;
     justify-content: space-between;
 }
-.spacing-vertical {
+.spacing-horizontal-narrow {
+    display: flex;
+    gap: calc(var(--flair-element-spacing-horizontal) / 2);
+}
+.spacing-horizontal {
     display: flex;
     gap: var(--flair-element-spacing-horizontal);
 }
